--- a/FRONTEND/src/app/edit-product/edit-product.component.html
+++ b/FRONTEND/src/app/edit-product/edit-product.component.html
@@ -3,7 +3,7 @@
       <h2>EDIT PRODUCT</h2>
     </div>
     <form >
-      <div class="col-sm-2 col-md-2 col-lg-2">
+      <div hidden class="col-sm-2 col-md-2 col-lg-2">
         <label >ID</label>
         <input type="number" 
         [(ngModel)]="currentProduct.idProduct"
